
gttuidir = $(datadir)/gnotime/ui

gttui_DATA =                 \
  active.ui                  \
  interval_edit.ui           \
  interval_popup.ui          \
  journal.ui                 \
  notes.ui                   \
  prefs.ui                   \
  project_properties.ui      \
  task_popup.ui              \
  task_properties.ui

EXTRA_DIST =          \
   $(gttui_DATA)

