
lang = C

gttghtmldir = $(datadir)/gnotime/ghtml/C

gttghtml_DATA =      \
	bigtable.ghtml    \
	daily.ghtml       \
	invoice.ghtml     \
	journal.ghtml     \
	noproject.ghtml   \
	primer.ghtml      \
	tab-delim.ghtml   \
	todo.ghtml	      \
	todo-export.ghtml \
	gtt.scm


EXTRA_DIST =         \
	.cvsignore        \
	$(gttghtml_DATA)


