
lang = C

gttghtmldir = $(datadir)/gnotime/ghtml/C

gttghtml_DATA =      \
	basic-journal.ghtml  \
	bigtable.ghtml    \
	daily.ghtml       \
	invoice.ghtml     \
	journal.ghtml     \
	noproject.ghtml   \
	primer.ghtml      \
	query.ghtml       \
	status.ghtml      \
	tab-delim.ghtml   \
	todo.ghtml	      \
	todo-export.ghtml \
	gnotime-logo.png  \
	gtt.scm           \
	gtt-style.css


EXTRA_DIST =         \
	.cvsignore        \
	$(gttghtml_DATA)


